--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,37 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eduapp">
+    package="com.eduhelperapp">
     <uses-permission
         android:name="android.permission.INTERNET"/>
-    <uses-permission
-        android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission
-        android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <queries>
-        <intent>
-            <action
-                android:name="android.intent.action.SEND"/>
-            <data
-                android:mimeType="*/*"/>
-        </intent>
-        <intent>
-            <action
-                android:name="android.intent.action.SENDTO"/>
-            <data
-                android:scheme="mailto"/>
-        </intent>
-        <intent>
-            <action
-                android:name="android.intent.action.VIEW"/>
-            <data
-                android:scheme="https"/>
-        </intent>
-        <intent>
-            <action
-                android:name="android.intent.action.VIEW"/>
-            <data
-                android:scheme="http"/>
-        </intent>
-    </queries>
     <application
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
@@ -59,17 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.yalantis.ucrop.UCropActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2"/>
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyB7p3J6ObHTC7Grcis_vSNYk_atTQldH_k"/>
     </application>
 </manifest>
