--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,38 +10,86 @@ environment:
 
 dependencies:
   edu_core:
-    path: ../edu-app-core/edu_core
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_core
+      ref: v0.0.1
   edu_localizations:
-    path: ../edu-app-core/edu_localizations
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_localizations
+      ref: v0.0.1
   edu_models:
-    path: ../edu-app-core/edu_models
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_models
+      ref: v0.0.1
   edu_repositories:
-    path: ../edu-app-core/edu_repositories
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_repositories
+      ref: v0.0.1
   edu_services:
-    path: ../edu-app-core/edu_services
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_services
+      ref: v0.0.1
   edu_ui_components:
-    path: ../edu-app-core/edu_ui_components
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: edu_ui_components
+      ref: v0.0.1
 
   feature_apply_project:
-    path: ../edu-app-core/features/feature_apply_project
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_apply_project
+      ref: v0.0.1
   feature_authentication:
-    path: ../edu-app-core/features/feature_authentication
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_authentication
+      ref: v0.0.1
   feature_create_project:
-    path: ../edu-app-core/features/feature_create_project
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_create_project
+      ref: v0.0.1
   feature_login:
-    path: ../edu-app-core/features/feature_login
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_login
+      ref: v0.0.1
   feature_model_provider:
-    path: ../edu-app-core/features/feature_model_provider
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_model_provider
+      ref: v0.0.1
   feature_models_list_provider:
-    path: ../edu-app-core/features/feature_models_list_provider
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_models_list_provider
+      ref: v0.0.1
   feature_process_application:
-    path: ../edu-app-core/features/feature_process_application
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_process_application
+      ref: v0.0.1
   feature_profile_editing:
-    path: ../edu-app-core/features/feature_profile_editing
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_profile_editing
+      ref: v0.0.1
   feature_registration:
-    path: ../edu-app-core/features/feature_registration
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_registration
+      ref: v0.0.1
   feature_settings:
-    path: ../edu-app-core/features/feature_settings
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: features/feature_settings
+      ref: v0.0.1
 
   flutter:
     sdk: flutter
@@ -49,7 +97,7 @@ dependencies:
   get_it: 7.2.0
   injectable: 2.1.0
   pull_to_refresh: 2.0.0
-  sentry_flutter: 6.13.1
+  sentry_flutter: 7.5.2
 
 dev_dependencies:
   build_runner: 2.2.1
@@ -58,7 +106,10 @@ dev_dependencies:
   flutter_native_splash: 2.2.2
   injectable_generator: 2.1.4
   lint_rules:
-    path: ../edu-app-core/lint_rules
+    git:
+      url: git@github.com:KutilinSA/edu-app-core.git
+      path: lint_rules
+      ref: v0.0.1
 
 flutter:
   uses-material-design: true
